--- a/biology.html
+++ b/biology.html
@@ -3,7 +3,7 @@
 <html>
 
   <head>
-    <title>Penguins</title>
+    <title>Emperor Penguins - Biology</title>
     <style></style>
     <link rel="stylesheet" type="text/css" href="./css/headstyle.css">
     <link rel="stylesheet" type="text/css" href="./css/bodystyle.css">
@@ -43,17 +43,31 @@
     </div>
 
     <div class="mainbody">
-      <h2 class="SectionTitle" style="padding-top:70px;">Biology</h2>
+      <h2 class="SectionTitle" style="padding-top:70px;">Physical Description</h2>
       <div style="display: flex;">
         <div class="infopara" style="width: 60%; float: left;">
-          <p>The <em>Aptenodytes Forsteri</em>, commonly known as the Emperor Penguin, is the largest of all penguin species and lives solely in Antarctica. The sides of the creature are black, along with the back and the head. This sharply contrasts from the white belly and yellow neck that they have. Despite having wings, it is flightless, but can swim extremely well in the frigid antarctic waters. Its diet mostly consists of fish and other small sea creatures it can find, and is the only penguin species to breed during the antarctic winter.</p>
+          <p>Like most penguin species, emperor penguins have thin streamlined bodies that help them swim, and wings that are more useful in the ocean as flippers. They also have many features that help them catch fish when hunting, including rear-facing barbs on the tongue. These help prevent prey from escaping after caught. An adult emperor penguin has pitch black plummage on its back, head, and dorsal fins. Typically the lower belly is pure white, slowly turning into orange towards the chest and throat. The bill can be yellow, orange or pink. Emperor Penguin chicks usually have black heads and grey plummge, with a white facemask. The penguin's plummage turns to brown during the Antarctic Summer (November to February).</p>
         </div>
         <div class="bodyother" style="float: right;">
-          <img src="./images/emperorpenguins.jpg" height="300px">
-          <img src="./images/emperorpenguins2.jpg" height="300px">
+          <img src="./images/emperorpenguinchick.jpg" height="250px">
+          <img src="./images/emperorpenguins3.jpg" height="300x">
         </div>
       </div>
       <hr/>
+      <h2 class="SectionTitle" style="padding-top:70px;">Adaptations</h2>
+      <div style="display: flex;">
+        <div class="infopara" style="width: 60%; float: left;">
+          <p>The emperor penguin lives in one of the coldest environments in the world, Antarctica, and needs to have many adaptations to deal with the temperature their dives into deep waters to find food.</p>
+          <h3>Cold</h3>
+          <p>The emperor penguin lives in temperatures that can be as low as -40˚C, and the water temperature is often below 0˚C. Because of this, they have many layers of fat and their feathers which provide insulation. In addition, the plummage is oily, and thus water resistant, which prevents their feathers from being waterlogged.</p>
+          <h3>Water Pressure and Low Oxygen</h3>
+          <p>In order to find food in the wastes of the Antarctic coasts, emperor penguins must dive to extremely deep depths in the ocean to find food. They must dive to depths of 500 meters, with 40 times the pressure than on the surface. The bones of the emperor penguin are solid rather than air filled like most birds to prevent barotrauma. In addition, penguins sometimes stay in the ocean for up to 18 minutes by reducing their heart rates and non-essential organs are shut down.</p>
+        </div>
+        <div class="bodyother" style="float: right;">
+          <img src="./images/penguinocean.jpg" height="250px">
+          <img src="./images/penguinslide.jpg" height="290x">
+        </div>
+      </div>
     </div>
 
     <div class="foot">
