finished info for biology.html and added images

--- a/biology.html
+++ b/biology.html
@@ -32,11 +32,11 @@
 
             <td class="TOCitem"><a href="./biology.html"><h4 style="color:white; text-decoration: none;">Biology</h4></a></td>
 
-            <td class="TOCitem"><a href="./humans.html"><h4 style="color:black; text-decoration: none;";>Human Interaction</h4></a></td>
+            <td class="TOCitem"><a href="./humans.html"><h4 style="color:black; text-decoration: none;">Human Interaction</h4></a></td>
 
-            <td class="TOCitem"><a href="./behavior.html"><h4 style="color:black; text-decoration: none;";>Behavior</h4></a></td>
+            <td class="TOCitem"><a href="./behavior.html"><h4 style="color:black; text-decoration: none;">Behavior</h4></a></td>
 
-            <td class="TOCitem"><a href="./other.html"><h4 style="color:black; text-decoration: none;";>Biology</h4></a></td>
+            <td class="TOCitem"><a href="./other.html"><h4 style="color:black; text-decoration: none;">Other</h4></a></td>
           </tr>
         </tbody>
       </table>
@@ -50,7 +50,11 @@
         </div>
         <div class="bodyother" style="float: right;">
           <img src="./images/emperorpenguinchick.jpg" height="250px">
-          <img src="./images/emperorpenguins3.jpg" height="300x">
+          <ul style="float: right; padding: 50px;">
+            <li>Height: 120 cm</li>
+            <li>Weight: 35 kg</li>
+            <li>Lifespan: 20 years</li>
+          </ul>
         </div>
       </div>
       <hr/>
@@ -58,9 +62,9 @@
       <div style="display: flex;">
         <div class="infopara" style="width: 60%; float: left;">
           <p>The emperor penguin lives in one of the coldest environments in the world, Antarctica, and needs to have many adaptations to deal with the temperature their dives into deep waters to find food.</p>
-          <h3>Cold</h3>
+          <h3></br>Cold</h3>
           <p>The emperor penguin lives in temperatures that can be as low as -40˚C, and the water temperature is often below 0˚C. Because of this, they have many layers of fat and their feathers which provide insulation. In addition, the plummage is oily, and thus water resistant, which prevents their feathers from being waterlogged.</p>
-          <h3>Water Pressure and Low Oxygen</h3>
+          <h3></br>Water Pressure and Low Oxygen</h3>
           <p>In order to find food in the wastes of the Antarctic coasts, emperor penguins must dive to extremely deep depths in the ocean to find food. They must dive to depths of 500 meters, with 40 times the pressure than on the surface. The bones of the emperor penguin are solid rather than air filled like most birds to prevent barotrauma. In addition, penguins sometimes stay in the ocean for up to 18 minutes by reducing their heart rates and non-essential organs are shut down.</p>
         </div>
         <div class="bodyother" style="float: right;">
