--- a/biology.html
+++ b/biology.html
@@ -92,7 +92,7 @@
         </div>
       </div>
       <div class="footbottom">
-        <p style="float:left; margin-right:45%">Copyright 2018</p>
+        <p style="float:left; margin-right:50%">© 2018</p>
         <p style="float:right;">AIT - UCVTS | APCSP</p>
       </div>
     </div>
