changed TOC hover color

--- a/biology.html
+++ b/biology.html
@@ -28,15 +28,15 @@
       <table style="width:100%;">
         <tbody>
           <tr>
-            <td class="TOCitem"><a href="./index.html"><h4 style="color:black; text-decoration: none;">Home</h4></a></td>
+            <td class="TOCitem"><a href="./index.html"><h4>Home</h4></a></td>
 
-            <td class="TOCitem"><a href="./biology.html"><h4 style="color:white; text-decoration: none;">Biology</h4></a></td>
+            <td class="TOCitem"><a href="./biology.html"><h4>Biology</h4></a></td>
 
-            <td class="TOCitem"><a href="./humans.html"><h4 style="color:black; text-decoration: none;">Human Interaction</h4></a></td>
+            <td class="TOCitem"><a href="./humans.html"><h4>Human Interaction</h4></a></td>
 
-            <td class="TOCitem"><a href="./behavior.html"><h4 style="color:black; text-decoration: none;">Behavior</h4></a></td>
+            <td class="TOCitem"><a href="./behavior.html"><h4>Behavior</h4></a></td>
 
-            <td class="TOCitem"><a href="./other.html"><h4 style="color:black; text-decoration: none;">Other</h4></a></td>
+            <td class="TOCitem"><a href="./other.html"><h4>Other</h4></a></td>
           </tr>
         </tbody>
       </table>
