--- a/biology.html
+++ b/biology.html
@@ -18,9 +18,9 @@
         <h3 class="subtitle">"It's practically impossible to look at a penguin and feel angry." <br> - Joe Moore</h3>
       </div>
       <div class="headerimg">
-        <img src="./images/emperor-penguin-clipart.png" height="100px">
-        <img src="./images/emperor-penguin-clipart.png" height="100px">
-        <img src="./images/emperor-penguin-clipart.png" height="100px">
+        <img class="headerimgheight" src="./images/emperor-penguin-clipart.png">
+        <img class="headerimgheight" src="./images/emperor-penguin-clipart.png">
+        <img class="headerimgheight" src="./images/emperor-penguin-clipart.png">
       </div>
     </div>
 
@@ -49,7 +49,7 @@
           <p>Like most penguin species, emperor penguins have thin streamlined bodies that help them swim, and wings that are more useful in the ocean as flippers. They also have many features that help them catch fish when hunting, including rear-facing barbs on the tongue. These help prevent prey from escaping after caught. An adult emperor penguin has pitch black plummage on its back, head, and dorsal fins. Typically the lower belly is pure white, slowly turning into orange towards the chest and throat. The bill can be yellow, orange or pink. Emperor Penguin chicks usually have black heads and grey plummge, with a white facemask. The penguin's plummage turns to brown during the Antarctic Summer (November to February).</p>
         </div>
         <div class="bodyother" style="float: right;">
-          <img src="./images/emperorpenguinchick.jpg" height="250px">
+          <img src="./images/emperorpenguinchick.jpg">
           <ul id="PhyAttributes">
             <li>Height: 120 cm</li>
             <li>Weight: 35 kg</li>
@@ -68,8 +68,8 @@
           <p>In order to find food in the wastes of the Antarctic coasts, emperor penguins must dive to extremely deep depths in the ocean to find food. They must dive to depths of 500 meters, with 40 times the pressure than on the surface. The bones of the emperor penguin are solid rather than air filled like most birds to prevent barotrauma. In addition, penguins sometimes stay in the ocean for up to 18 minutes by reducing their heart rates and non-essential organs are shut down.</p>
         </div>
         <div class="bodyother" style="float: right;">
-          <img src="./images/penguinocean.jpg" height="250px">
-          <img src="./images/penguinslide.jpg" height="290x">
+          <img src="./images/penguinocean.jpg">
+          <img src="./images/penguinslide.jpg">
         </div>
       </div>
     </div>
